# invoice-analysis-pipeline

./: .gitignore  README.md  app.py  dump_raw.py  fitz_blocks.json  fitz_text.txt  llm_plumber_result.json  packages.txt  pyproject.toml  raw_extraction.json  raw_extraction2.json  requirements.txt  test_app_sim.py  test_fitz.py  test_llm.py  test_llm_plumber.py  test_paddle.py  test_run.py
invoice_uom/: __init__.py  __main__.py  cache.py  cli.py  config.py  extract_docling.py  line_items.py  llm_client.py  llm_extract.py  lookup_agent.py  ocr_paddle.py  pipeline.py  rate_limit.py  scoring.py  supplier_normalize.py  uom_normalize.py  watcher.py
tests/: test_line_items.py  test_uom_normalize.py
